--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node index.js",
+    "build": "node index.js",
+    "test": "node index.js",
+    "eject": "node index.js"
   },
   "eslintConfig": {
     "extends": [
@@ -36,3 +36,4 @@
     ]
   }
 }
+
