--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "card-projectim",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.x"
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -10,12 +13,13 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+    
   },
   "scripts": {
-    "start": "node index.js",
-    "build": "node index.js",
-    "test": "node index.js",
-    "eject": "node index.js"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -36,4 +40,3 @@
     ]
   }
 }
-
